[gd_scene load_steps=2 format=3 uid="uid://pj3okss4lgka"]

[ext_resource type="Script" path="res://scripts/draft_phase/choice_display.gd" id="1_fpn21"]

[node name="ChoiceDisplay" type="Control"]
custom_minimum_size = Vector2(100, 170)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1420.0
offset_bottom = -230.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_fpn21")

[node name="CharacterCardContainer" type="AspectRatioContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
ratio = 0.5882

[node name="CharacterSprite" type="TextureRect" parent="CharacterCardContainer"]
unique_name_in_owner = true
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="CharacterNameContainer" type="AspectRatioContainer" parent="CharacterCardContainer"]
layout_mode = 2
ratio = 4.7
alignment_vertical = 2

[node name="CharacterName" type="Label" parent="CharacterCardContainer/CharacterNameContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 40
horizontal_alignment = 1
vertical_alignment = 1
text_overrun_behavior = 3

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
